--- a/damage-calculator.html
+++ b/damage-calculator.html
@@ -6,7 +6,7 @@
   <title>Calculadora de Builds - Pokémon Unite</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="calculadora.css">
-  <script src="util.js"></script>
+  <script src="estatisticas-shad/util.js"></script>
 </head>
 <body>
   <main class="calculadora-container">
