incluido botão de voltar

--- a/damage-calculator.html
+++ b/damage-calculator.html
@@ -10,6 +10,8 @@
 </head>
 <body>
   <main class="calculadora-container">
+    <a href="material.html" class="calculadora-voltar">← Voltar para o início</a>
+    
     <h2>Calculadora de Status</h2>
 
     <!-- Seleção de Pokémon -->
@@ -40,7 +42,6 @@
     </label>
     </div>
 
-
     <!-- Seleção de Itens -->
     <label>Itens Segurados:</label>
     <div id="itens-container" class="campos-linha">
@@ -58,9 +59,8 @@
       </div>
     </div>
 
-    <!-- Botões -->
+    <!-- Botão de Reset apenas -->
     <div class="botoes-calculadora">
-      <button id="calcular" class="btn">Calcular</button>
       <button id="resetar" class="btn">Resetar</button>
     </div>
 
@@ -78,7 +78,3 @@
       </div>
     </div>
   </main>
-
-  <script src="damage-calculator.js"></script>
-</body>
-</html>
