--- a/damage-calculator.html
+++ b/damage-calculator.html
@@ -10,8 +10,6 @@
 </head>
 <body>
   <main class="calculadora-container">
-    <a href="material.html" class="calculadora-voltar">← Voltar para o início</a>
-    
     <h2>Calculadora de Status</h2>
 
     <!-- Seleção de Pokémon -->
@@ -42,6 +40,7 @@
     </label>
     </div>
 
+
     <!-- Seleção de Itens -->
     <label>Itens Segurados:</label>
     <div id="itens-container" class="campos-linha">
@@ -59,8 +58,9 @@
       </div>
     </div>
 
-    <!-- Botão de Reset apenas -->
+    <!-- Botões -->
     <div class="botoes-calculadora">
+      <button id="calcular" class="btn">Calcular</button>
       <button id="resetar" class="btn">Resetar</button>
     </div>
 
@@ -78,3 +78,7 @@
       </div>
     </div>
   </main>
+
+  <script src="damage-calculator.js"></script>
+</body>
+</html>
