att na calculadora

--- a/damage-calculator.html
+++ b/damage-calculator.html
@@ -6,7 +6,7 @@
   <title>Calculadora de Builds - Pokémon Unite</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="calculadora.css">
-  <script src="estatisticas-shad/util.js"></script>
+  <script src="util.js"></script>
 </head>
 <body>
   <main class="calculadora-container">
@@ -42,7 +42,6 @@
       </label>
       </div>
 
-
       <!-- Seleção de Itens -->
       <label>Itens Segurados:</label>
       <div id="itens-container" class="campos-linha">
@@ -69,12 +68,12 @@
       <div id="resultado" class="resultado-container">
         <div class="resultado-dados">
           <div class="coluna-temporada">
-            <h3>Status Base</h3>
-            <div id="status-base"></div>
+            <h3>Status Final</h3>
+            <div id="status-final"></div>
           </div>
           <div class="coluna-total">
-            <h3>Status com Itens</h3>
-            <div id="status-final"></div>
+            <h3>Skills</h3>
+            <div id="skills-column"></div>
           </div>
         </div>
       </div>
