--- a/noticia4.html
+++ b/noticia4.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Guariní vence a Cálice Real e entra no G4.</title>
-  <meta name="description" content="Guariní vence a Aeos Red e se firma no top 3 da tabela">
+  <meta name="description" content="Guariní segue firme no topo">
   <link rel="icon" href="favicon.png" type="image/png">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="noticias.css">
