atualização calc passivas

--- a/damage-calculator.html
+++ b/damage-calculator.html
@@ -55,11 +55,14 @@
         </label>
       </div>
 
-      <!-- Container dos Emblemas -->
+       <!-- Container dos Emblemas -->
       <div id="emblemas-container" style="display: none; margin-top: 15px;">
         <div class="campos-linha">
           <div>
-            <label for="emblem-verde">Verde (Sp. ATK):</label>
+            <label for="emblem-verde">
+              <span class="emblem-color-dot" style="background-color: #28a745;"></span>
+              Verde (Sp. ATK):
+            </label>
             <select id="emblem-verde" class="form-control">
               <option value="">Nenhum</option>
               <option value="2">Nível 2 (+1% Sp. ATK)</option>
@@ -68,7 +71,10 @@
             </select>
           </div>
           <div>
-            <label for="emblem-vermelho">Vermelho (Atk Speed):</label>
+            <label for="emblem-vermelho">
+              <span class="emblem-color-dot" style="background-color: #dc3545;"></span>
+              Vermelho (Atk Speed):
+            </label>
             <select id="emblem-vermelho" class="form-control">
               <option value="">Nenhum</option>
               <option value="3">Nível 3 (+2% Atk Speed)</option>
@@ -77,7 +83,10 @@
             </select>
           </div>
           <div>
-            <label for="emblem-azul">Azul (DEF):</label>
+            <label for="emblem-azul">
+              <span class="emblem-color-dot" style="background-color: #007bff;"></span>
+              Azul (DEF):
+            </label>
             <select id="emblem-azul" class="form-control">
               <option value="">Nenhum</option>
               <option value="2">Nível 2 (+2% DEF)</option>
@@ -88,7 +97,10 @@
         </div>
         <div class="campos-linha">
           <div>
-            <label for="emblem-branco">Branco (HP):</label>
+            <label for="emblem-branco">
+              <span class="emblem-color-dot" style="background-color: #ffffff; border: 1px solid #ccc;"></span>
+              Branco (HP):
+            </label>
             <select id="emblem-branco" class="form-control">
               <option value="">Nenhum</option>
               <option value="2">Nível 2 (+1% HP)</option>
@@ -97,7 +109,10 @@
             </select>
           </div>
           <div>
-            <label for="emblem-preto">Preto (CDR):</label>
+            <label for="emblem-preto">
+              <span class="emblem-color-dot" style="background-color: #343a40;"></span>
+              Preto (CDR):
+            </label>
             <select id="emblem-preto" class="form-control">
               <option value="">Nenhum</option>
               <option value="3">Nível 3 (+1% CDR)</option>
@@ -106,7 +121,10 @@
             </select>
           </div>
           <div>
-            <label for="emblem-amarelo">Amarelo (Speed):</label>
+            <label for="emblem-amarelo">
+              <span class="emblem-color-dot" style="background-color: #ffc107;"></span>
+              Amarelo (Speed):
+            </label>
             <select id="emblem-amarelo" class="form-control">
               <option value="">Nenhum</option>
               <option value="3">Nível 3 (+4% Speed)</option>
@@ -117,7 +135,10 @@
         </div>
         <div class="campos-linha">
           <div>
-            <label for="emblem-marrom">Marrom (ATK):</label>
+            <label for="emblem-marrom">
+              <span class="emblem-color-dot" style="background-color: #8b4513;"></span>
+              Marrom (ATK):
+            </label>
             <select id="emblem-marrom" class="form-control">
               <option value="">Nenhum</option>
               <option value="2">Nível 2 (+1% ATK)</option>
@@ -126,7 +147,10 @@
             </select>
           </div>
           <div>
-            <label for="emblem-roxo">Roxo (Sp. DEF):</label>
+            <label for="emblem-roxo">
+              <span class="emblem-color-dot" style="background-color: #6f42c1;"></span>
+              Roxo (Sp. DEF):
+            </label>
             <select id="emblem-roxo" class="form-control">
               <option value="">Nenhum</option>
               <option value="2">Nível 2 (+2% Sp. DEF)</option>
@@ -135,7 +159,10 @@
             </select>
           </div>
           <div>
-            <label for="emblem-rosa">Rosa (Hindrance Reduction):</label>
+            <label for="emblem-rosa">
+              <span class="emblem-color-dot" style="background-color: #e83e8c;"></span>
+              Rosa (Hindrance Reduction):
+            </label>
             <select id="emblem-rosa" class="form-control">
               <option value="">Nenhum</option>
               <option value="3">Nível 3 (+4% Hindrance Reduction)</option>
@@ -146,7 +173,10 @@
         </div>
         <div class="campos-linha">
           <div>
-            <label for="emblem-azul-marinho">Azul-Marinho (Ult Charge Rate):</label>
+            <label for="emblem-azul-marinho">
+              <span class="emblem-color-dot" style="background-color: #1e3a8a;"></span>
+              Azul-Marinho (Ult Charge Rate):
+            </label>
             <select id="emblem-azul-marinho" class="form-control">
               <option value="">Nenhum</option>
               <option value="3">Nível 3 (+1% Ult Charge Rate)</option>
@@ -155,7 +185,10 @@
             </select>
           </div>
           <div>
-            <label for="emblem-cinza">Cinza (Damage Taken):</label>
+            <label for="emblem-cinza">
+              <span class="emblem-color-dot" style="background-color: #6c757d;"></span>
+              Cinza (Damage Taken):
+            </label>
             <select id="emblem-cinza" class="form-control">
               <option value="">Nenhum</option>
               <option value="3">Nível 3 (-3 Damage Taken)</option>
