git commit -m "SCRUM-27 <update loja>"

--- a/loja.html
+++ b/loja.html
@@ -64,21 +64,102 @@
       <article class="produto">
         <img src="./shop/camisa.jpg" alt="Camisa Oficial Guariní" />
         <h3>Camisa Oficial</h3>
-        <p class="preco">R$ 69,90</p>
-        <button type="button" class="btn-comprar">Comprar</button>
+        <p class="preco">????</p>
+        <button type="button" class="btn-comprar">Em breve</button>
       </article>
 
       <article class="produto">
-        <img src="./shop/bone.jpg" alt="Boné Guariní" />
-        <h3>Boné Guariní</h3>
-        <p class="preco">R$ 39,90</p>
+        <img src="./shop/mochila.jpg" alt="Mochila Guariní" />
+        <h3>Mochila</h3>
+        <p class="preco">$ 47,70</p>
         <button type="button" class="btn-comprar">Comprar</button>
       </article>
+    </section>
 
       <article class="produto">
-        <img src="./shop/mousepad.jpg" alt="Mousepad Gamer Guariní" />
-        <h3>Mousepad Gamer</h3>
-        <p class="preco">R$ 49,90</p>
+        <img src="./shop/agenda.jpg" alt="Caderno capa dura Guariní" />
+        <h3>Meu caderno de capa dura</h3>
+        <p class="preco">$ 21,00</p>
+        <button type="button" class="btn-comprar">Comprar</button>
+      </article>
+    </section>    
+
+      <article class="produto">
+        <img src="./shop/caderno.jpg" alt="Caderno espiral Guariní" />
+        <h3>Caderno espiral</h3>
+        <p class="preco">$ 20,00</p>
+        <button type="button" class="btn-comprar">Comprar</button>
+      </article>
+    </section>
+
+      <article class="produto">
+        <img src="./shop/garrafinha.jpg" alt="Garrafa de água Guariní" />
+        <h3>Garrafa de água de aço inoxidável</h3>
+        <p class="preco">$ 30,00</p>
+        <button type="button" class="btn-comprar">Comprar</button>
+      </article>
+    </section>    
+
+      <article class="produto">
+        <img src="./shop/caneca.jpg" alt="Caneca Guariní" />
+        <h3>Caneca de viagem com alça</h3>
+        <p class="preco">$ 29,00</p>
+        <button type="button" class="btn-comprar">Comprar</button>
+      </article>
+    </section>  
+
+      <article class="produto">
+        <img src="./shop/copo-canudo.jpg" alt="Copo de aço Guariní" />
+        <h3>Copo de aço inoxidável</h3>
+        <p class="preco">$ 31,00</p>
+        <button type="button" class="btn-comprar">Comprar</button>
+      </article>
+    </section> 
+
+      <article class="produto">
+        <img src="./shop/copo.jpg" alt="Copo Guariní" />
+        <h3>Copo de vinho</h3>
+        <p class="preco">$ 26,00</p>
+        <button type="button" class="btn-comprar">Comprar</button>
+      </article>
+    </section> 
+
+      <article class="produto">
+        <img src="./shop/apple-arte.jpg" alt="Capa Snap para iPhone Guariní" />
+        <h3>Capa Snap para iPhone</h3>
+        <p class="preco">$ 22,00</p>
+        <button type="button" class="btn-comprar">Comprar</button>
+      </article>
+    </section> 
+
+      <article class="produto">
+        <img src="./shop/samgung-arte.jpg" alt="Capa Snap para Samsung Guariní" />
+        <h3>Capa Snap para Samsung</h3>
+        <p class="preco">$ 22,00</p>
+        <button type="button" class="btn-comprar">Comprar</button>
+      </article>
+    </section> 
+
+      <article class="produto">
+        <img src="./shop/apple-transparente.jpg" alt="Capa transparente para iPhone Guariní" />
+        <h3>Capa transparente para iPhone</h3>
+        <p class="preco">$ 18,00</p>
+        <button type="button" class="btn-comprar">Comprar</button>
+      </article>
+    </section> 
+
+      <article class="produto">
+        <img src="./shop/samsung-transparente.jpg" alt="Capa transparente para Samsung Guariní" />
+        <h3>Capa transparente para Samsung</h3>
+        <p class="preco">$ 17,00</p>
+        <button type="button" class="btn-comprar">Comprar</button>
+      </article>
+    </section> 
+
+      <article class="produto">
+        <img src="./shop/stick.jpg" alt="Adesivos holográficos Kiss-Cut Guariní" />
+        <h3>Adesivos holográficos Kiss-Cut</h3>
+        <p class="preco">$ 11,00</p>
         <button type="button" class="btn-comprar">Comprar</button>
       </article>
     </section>
