--- a/loja.html
+++ b/loja.html
@@ -62,7 +62,7 @@
       <article class="produto">
         <img src="./shop/camisa.jpg" alt="Camisa Oficial Guariní" />
         <h3>Camisa Oficial</h3>
-        <p class="preco">????</p>
+        <p class="preco">Em breve</p>
         <button type="button" class="btn-comprar" disabled>Em breve</button>
       </article>
 
