--- a/loja.html
+++ b/loja.html
@@ -160,7 +160,7 @@
   <footer>
     <p>&copy; 2025 Guariní e-sport. Todos os direitos reservados.</p>
     <p><a href="https://linktr.ee/guariniesports" target="_blank" rel="noopener noreferrer">Conheça nossas redes sociais</a></p>
-    <p>Created by: Lobo</p>
+    <p>Created by: Lobo & Shad</p>
   </footer>
 
   <script>
