--- a/equipes.html
+++ b/equipes.html
@@ -77,6 +77,14 @@
         <button type="button" class="btn-comprar" id="staffBtn">Ver Detalhes</button>
       </article>
 
+      <!-- Streamers -->
+      <article class="equipe">
+        <img src="./img-site/staff.png" alt="Streamers" />
+        <h3>Streamers</h3>
+        <p class="descricao">Nossos streamers</p>
+        <button type="button" class="btn-comprar" id="streamerBtn">Ver Detalhes</button>
+      </article>      
+
       <!-- Pokemon Unite -->
       <article class="equipe">
         <img src="./img-site/pokemonunite.png" alt="Pokémon Unite" />
