add pawmot na calc e update calc

--- a/desempenho.html
+++ b/desempenho.html
@@ -93,7 +93,7 @@
         </div>
       </div>
 
-      <div id="multiplicador-info" class="multiplicador-info">
+      <div id="multiplicador-info" class="multiplicador-info" style="display:none;">
         ⚠️ No cálculo de desempenho de SUP e TANK é utilizado um multiplicador para o valor de MVP, pois essas roles têm menos MVPs por partida.
       </div>
 
