--- a/damage-calculator.html
+++ b/damage-calculator.html
@@ -289,6 +289,11 @@
           </div>
         </div>
       </div>
+
+      <div style="margin-top:20px; text-align:center;">
+        <button id="btn-download" class="btn">📷 Baixar Resultado em Imagem</button>
+      </div>
+
     </section>
   </main>
   <script src="damage-calculator.js"></script>
