--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="noticias.css">
   <link rel="stylesheet" href="videos.css">
+  <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#ff0000">
 </head>
 <body>
   <a id="topo"></a>
@@ -370,6 +372,15 @@
       }
     });
   });
+</script>
+
+<script>
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker
+      .register("/service-worker.js")
+      .then(() => console.log("Service Worker registrado!"))
+      .catch((err) => console.error("Erro no Service Worker:", err));
+  }
 </script>
 
 </body>
