--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
   <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#ff0000">
 </head>
+
+<button id="installBtn">Instalar Guariní</button>
+
+<script>
+let deferredPrompt;
+
+window.addEventListener('beforeinstallprompt', (e) => {
+  e.preventDefault();
+  deferredPrompt = e;
+  document.getElementById('installBtn').style.display = 'block';
+});
+
+document.getElementById('installBtn').addEventListener('click', async () => {
+  if (!deferredPrompt) return;
+  deferredPrompt.prompt();
+  const { outcome } = await deferredPrompt.userChoice;
+  deferredPrompt = null;
+  document.getElementById('installBtn').style.display = 'none';
+  console.log('Usuário respondeu:', outcome);
+});
+</script>
+
 <body>
   <a id="topo"></a>
 
