--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <link rel="stylesheet" href="videos.css">
   <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#ff0000">
+<!-- iOS meta tags -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<link rel="apple-touch-icon" href="/icons/icon-192.png">
 </head>
 
 <button id="installBtn">Instalar Guariní</button>
