--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="noticias.css">
   <link rel="stylesheet" href="videos.css">
   <link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#ff0000">
+<meta name="theme-color" content="#ffad00">
 <!-- iOS meta tags -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
