--- a/equipes.html
+++ b/equipes.html
@@ -49,7 +49,7 @@
         <ul>
           <li><a href="index.html">Início</a></li>
           <li><a href="sobre.html">Sobre</a></li>
-          <li><a href="times.html" class="ativo">Times</a></li>
+          <li><a href="equipes.html" class="ativo">Times</a></li>
           <li><a href="loja.html">Loja</a></li>
           <li><a href="material.html">Material</a></li>
           <li><a href="contato.html">Contato</a></li>
