--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ document.getElementById('installBtn').addEventListener('click', async () => {
         <ul>
           <li><a href="index.html" class="ativo">Início</a></li>
           <li><a href="sobre.html">Sobre</a></li>
-          <li><a href="times.html">Times</a></li>
+          <li><a href="equipes.html">Times</a></li>
           <li><a href="loja.html">Loja</a></li>
           <li><a href="material.html">Material</a></li>
           <li><a href="contato.html">Contato</a></li>
