--- a/sobre.html
+++ b/sobre.html
@@ -44,7 +44,7 @@
         <ul>
           <li><a href="index.html">Início</a></li>
           <li><a href="sobre.html" class="ativo">Sobre</a></li>
-          <li><a href="times.html">Times</a></li>
+          <li><a href="equipes.html">Times</a></li>
           <li><a href="loja.html">Loja</a></li>
           <li><a href="material.html">Material</a></li>
           <li><a href="contato.html">Contato</a></li>
