--- a/equipes.html
+++ b/equipes.html
@@ -90,7 +90,15 @@
         <img src="./img-site/pokemonunite.png" alt="Pokémon Unite" />
         <h3>Pokémon Unite</h3>
         <p class="descricao">Nossa equipe competitiva de Pokemon Unite</p>
-        <button type="button" class="btn-comprar" id="pokemonBtn">Ver Detalhes</button>
+        <button type="button" class="btn-comprar" id="uniteBtn">Ver Detalhes</button>
+      </article>
+
+      <!-- Pokemon VGC -->
+      <article class="equipe">
+        <img src="./img-site/pkmvgc.png" alt="Pokémon VGC" />
+        <h3>Pokémon VGC</h3>
+        <p class="descricao">Nossos treinadores profissionais de Pokémon VGC</p>
+        <button type="button" class="btn-comprar" id="vgcBtn">Ver Detalhes</button>
       </article>
 
       <!-- YugiOh -->
