--- a/login.html
+++ b/login.html
@@ -80,6 +80,19 @@
     font-size: 12px;
   }
 </style>
+<div id="google_translate_element"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement(
+    {pageLanguage: 'pt', includedLanguages: 'pt,en,ja'},
+    'google_translate_element'
+  );
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 </head>
 <body>
 <div class="container">
