--- a/avaliaçaopontos.html
+++ b/avaliaçaopontos.html
@@ -8,6 +8,19 @@
   <link rel="icon" href="favicon.png" type="image/png">
   <link href="./style.css" type="text/css" rel="stylesheet">
   <link href="./avaliaçaopontos.css" type="text/css" rel="stylesheet">
+  <div id="google_translate_element"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement(
+    {pageLanguage: 'pt', includedLanguages: 'pt,en,ja'},
+    'google_translate_element'
+  );
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 </head>
 <body>
   <div class="analise-container">
