--- a/scrims-result.html
+++ b/scrims-result.html
@@ -30,6 +30,19 @@
       }
     }
   </style>
+  <div id="google_translate_element"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement(
+    {pageLanguage: 'pt', includedLanguages: 'pt,en,ja'},
+    'google_translate_element'
+  );
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 </head>
 <body class="w-full min-h-screen bg-cover bg-no-repeat bg-center" style="background-image: url(./background.jpg)">
   <div class="max-w-3xl mx-auto p-2 sm:p-4 pb-20 rounded">
