--- a/sobre.html
+++ b/sobre.html
@@ -7,6 +7,19 @@
   <title>Sobre a Guariní e-sport</title>
   <link rel="icon" href="favicon.png" type="image/png" />
   <link rel="stylesheet" href="style.css" />
+  <div id="google_translate_element"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement(
+    {pageLanguage: 'pt', includedLanguages: 'pt,en,ja'},
+    'google_translate_element'
+  );
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 </head>
 <body>
   <a id="topo"></a>
