--- a/avaliaçaopontos.html
+++ b/avaliaçaopontos.html
@@ -22,6 +22,15 @@ function googleTranslateElementInit() {
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-84NHN394WF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-84NHN394WF');
+</script>
 <body>
   <div class="analise-container">
     <a href="material.html" class="voltar-link">← Voltar para o início</a>
