--- a/scrims-result.html
+++ b/scrims-result.html
@@ -44,6 +44,15 @@ function googleTranslateElementInit() {
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-84NHN394WF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-84NHN394WF');
+</script>
 <body class="w-full min-h-screen bg-cover bg-no-repeat bg-center" style="background-image: url(./background.jpg)">
   <div class="max-w-3xl mx-auto p-2 sm:p-4 pb-20 rounded">
     <!-- Título Principal -->
