--- a/quiz.html
+++ b/quiz.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quiz Pokémon Unite - Soulslike</title>
   <link rel="stylesheet" href="stylequiz.css">
+  <link rel="icon" href="favicon.png" type="image/png" />
 </head>
 <body>
   <div class="quiz-container">
