--- a/damage-calculator.html
+++ b/damage-calculator.html
@@ -197,20 +197,23 @@ function googleTranslateElementInit() {
         <button id="btn-download" class="btn">📷 Baixar Resultado em Imagem</button>
       </div>
 
-          <!-- Footer com marca d'água -->
-    <footer style="text-align: center; padding: 20px; margin-top: 40px; color: #fe8a01; border-top: 1px solid #fe8a01;">
-      <div style="display: flex; flex-direction: column; align-items: center; gap: 10px;">
-        <img src="./img-site/Guarini.png" alt="Logo Guarini" style="height: 40px;">
-        <div style="display: flex; gap: 20px;">
-          <a href="https://x.com/Shadtrader32" target="_blank" style="color: #fe8a01; text-decoration: none;">
-            @Shadtrader32
-          </a>
-          <a href="https://x.com/lobo_vgc" target="_blank" style="color: #fe8a01; text-decoration: none;">
-            @lobo_vgc
-          </a>
+      <!-- Footer com marca d'água -->
+      <footer style="text-align: center; padding: 20px; margin-top: 40px; color: #fe8a01; border-top: 1px solid #fe8a01;">
+        <div style="display: flex; flex-direction: column; align-items: center; gap: 10px;">
+          <img src="./img-site/Guarini.png" alt="Logo Guarini" style="height: 40px;">
+          <div style="display: flex; gap: 20px;">
+            <a href="https://x.com/Shadtrader32" target="_blank" style="color: #fe8a01; text-decoration: none;">
+              @Shadtrader32
+            </a>
+            <a href="https://x.com/lobo_vgc" target="_blank" style="color: #fe8a01; text-decoration: none;">
+              @lobo_vgc
+            </a>
+          </div>
+          <div style="font-size: 0.9em; color: #fe8a01; opacity: 0.8;">
+            Special thanks to <a href="https://unite-db.com" target="_blank" style="color: #fe8a01; text-decoration: underline;">unite-db</a> for sharing formulas and data
+          </div>
         </div>
-      </div>
-    </footer>
+      </footer>
 
     </section>
   </main>
