--- a/material.html
+++ b/material.html
@@ -179,7 +179,7 @@ function googleTranslateElementInit() {
         <img src="./img-site/quizsouls.png" alt="Build Maker" />
         <h3>Quiz Unite</h3>
         <p class="descricao">Teste seus conhecimentos no Quiz do Pokémon Unite</p>
-        <button type="button" class="btn-comprar" id="buildBtn">Acessar</button>
+        <button type="button" class="btn-comprar" id="quizBtn">Acessar</button>
         <div id="quizAccessMessage" style="color: red; margin-top: 10px; display: none;"></div>
       </article>      
 
