dark mode update

--- a/damage-calculator.html
+++ b/damage-calculator.html
@@ -193,7 +193,11 @@ function googleTranslateElementInit() {
         </div>
       </div>
 
-      <div style="margin-top:20px; text-align:center;">
+      <div class="action-buttons-container" style="margin-top:20px; text-align:center;">
+        <button id="btn-theme-toggle" class="theme-toggle-btn">
+          <span class="theme-icon">🌙</span>
+          <span class="theme-text">Dark Mode</span>
+        </button>
         <button id="btn-download" class="btn">📷 Baixar Resultado em Imagem</button>
       </div>
 
