--- a/damage-calculator.html
+++ b/damage-calculator.html
@@ -164,7 +164,7 @@ function googleTranslateElementInit() {
       </div>
 
       <!-- Seletor de Nível Circular -->
-      <div class="level-selector-container">
+      <div class="level-selector-container hidden-until-pokemon" id="level-selector-container">
         <div class="level-label-new">Nível:</div>
         <div class="level-controls-new" id="level-controls-new">
           <div class="level-button" id="level-decrease" title="Diminuir nível">−</div>
@@ -193,8 +193,8 @@ function googleTranslateElementInit() {
         </div>
       </div>
 
-      <div class="action-buttons-container" style="margin-top:20px; text-align:center;">
-        <button id="btn-theme-toggle" class="theme-toggle-btn">
+      <div class="action-buttons-container hidden-until-pokemon" id="action-buttons-container" style="margin-top:20px; text-align:center;">
+        <button id="btn-theme-toggle" class="theme-toggle-btn">   
           <span class="theme-icon">🌙</span>
           <span class="theme-text">Dark Mode</span>
         </button>
