--- a/scrims-result.html
+++ b/scrims-result.html
@@ -155,7 +155,7 @@ function googleTranslateElementInit() {
     projectId: "site-grn",
     storageBucket: "site-grn.firebasestorage.app",
     messagingSenderId: "27613322806",
-    appId: "1:27613322806:web:COLE_SEU_APP_ID_AQUI"
+    appId: "1:27613322806:web:ad4dc08ce043f19d530297",
   };
   
   // Inicializa o Firebase
