testando o meta comparision

--- a/damage-calculator.html
+++ b/damage-calculator.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="calculadora.css">
   <script src="util.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script> 
   <div id="google_translate_element"></div>
 
 <script type="text/javascript">
@@ -214,6 +215,10 @@ function googleTranslateElementInit() {
           <div class="coluna-total">
             <h3>Skills</h3>
             <div id="skills-column"></div>
+          </div>
+          <div class="coluna-meta-comparison" id="meta-comparison-column">
+            <h3>Meta Comparison</h3>
+            <div id="meta-charts-container"></div>
           </div>
         </div>
       </div>
