att sobre citação do unite api

--- a/damage-calculator.html
+++ b/damage-calculator.html
@@ -245,6 +245,7 @@ function googleTranslateElementInit() {
           </div>
           <div style="font-size: 0.9em; color: #fe8a01; opacity: 0.8;">
             Special thanks to <a href="https://unite-db.com" target="_blank" style="color: #fe8a01; text-decoration: underline;">unite-db</a> for sharing formulas and data
+            and also to <a href="https://uniteapi.dev/" target="_blank" style="color: #fe8a01; text-decoration: underline;">unite-api</a> for sharing weekly metas
           </div>
         </div>
       </footer>
