adição do menu na calculadora

--- a/perfil.html
+++ b/perfil.html
@@ -88,7 +88,7 @@
         <!-- Foto de Perfil -->
         <div class="perfil-avatar-container">
           <div class="perfil-avatar" id="perfilAvatar">
-            <img src="./estatisticas-shad/images/sprits/pikachu.png" alt="Avatar do usuário" id="avatarImg">
+            <img src="./estatisticas-shad/images/sprites/pikachu.png" alt="Avatar do usuário" id="avatarImg">
           </div>
         </div>
 
@@ -108,7 +108,7 @@
       <!-- Área para futuras informações -->
       <div class="perfil-content">
         <h3>Configurações e Dados</h3>
-        <p class="perfil-placeholder">Esta área será usada para salvar informações adicionais do site.</p>
+        <p class="perfil-placeholder">Em breve...</p>
       </div>
     </section>
   </main>
