mudança visual nos botões

--- a/damage-calculator.html
+++ b/damage-calculator.html
@@ -242,30 +242,22 @@ function googleTranslateElementInit() {
           </div>
         </div>
       </div>
-
       <div class="action-buttons-container hidden-until-pokemon" id="action-buttons-container" style="margin-top:20px; text-align:center;">
         <button id="btn-theme-toggle" class="theme-toggle-btn">
           <span class="theme-icon">🌙</span>
           <span class="theme-text">Dark Mode</span>
         </button>
-        <button id="btn-download" class="btn">📷 Download Result as Image</button>
-      </div>
-
-      <!-- Adicione este código APÓS a linha 122 do damage-calculator.html -->
-      <!-- Logo após o container de botões de ação existente -->
-
-      <div class="build-actions-container" style="display: flex; justify-content: center; gap: 15px; margin-top: 20px; flex-wrap: wrap;">
+                <!-- ✅ ADICIONE ESTES 3 BOTÕES AQUI (remova do lugar atual) -->
         <button id="btn-save-build" class="btn-build-action" disabled>
           💾 Save Build
         </button>
-        
         <button id="btn-load-build" class="btn-build-action" disabled>
           📂 Load Build
         </button>
-        
         <button id="btn-new-build" class="btn-build-action">
           ➕ New Build
         </button>
+        <button id="btn-download" class="btn">📷 Download Result as Image</button>
       </div>
 
       <!-- Modal para salvar build -->
